# Compressor

./: .gitignore  CMakeLists.txt  main.cpp
cpp/io/: BitReader.cpp  BitWriter.cpp  FileManager.cpp
cpp/structure/: Frequency.cpp  HuffTree.cpp
header/io/: BitReader.h  BitWriter.h  FileManager.h
header/structure/: Frequency.h  HuffTree.h  PriorityQueue.h
